Publishing current WDS changes to original QT code

- Updated README

- ~QHttpNetworkConnectionPrivate - disconnect from socket's signals

    We have a 'channel' object connected to a socket with Qt::DirectConnection.
    QHttpNetworkConnectionPrivate in its dtor (note, it's a private object destroyed
    after its 'q' - QHttpNetworkConnection - was destroyed) calls socket->close()
    and this can end up in socket setting an error and emitting (for example, in
    QSslSocket::transmit). The slot (QHttpNetworkConnectionChannel::_q_error) will
    access the now-dead/non-existing connection then. So disconnect the channel
    from the socket early, before closing the socket.

    Task-number: QTBUG-54167
    Change-Id: I3ed4ba4b00650c3a39e5c1f33aa786e47bfbbc57
    Reviewed-by: Konstantin Tokarev <annulen@yandex.ru>
    Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
    Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
    Reviewed-by: Marc Mutz <marc.mutz@kdab.com>
    Signed-off-by: d_komarov <d_komarov@wargaming.net>

- QNetworkAccessManager: defer call to _q_networkSessionStateChanged
    Also, call it only if the state really changes. If we stay disconnected
    the whole time, there is no point in trying to create the session over
    and over.

- WGC doesn't detect network connection resuming Disabled offline state handling.

- Crash: EXCEPTION_ACCESS_VIOLATION at qnativewifibearer.dll!QNetworkSessionPrivateImpl::open Fixed.

- Fixed qt plugin loading issue when MMF pages being unloaded while qt addresses that file mapping

- WGC crashes while clicking back button during video playback on full news page. Added workaround.

- Added additional check for pointer retrieved via GetWindowLong.

- Crash WGC in WebKit.